[project]
name = "pysidelab"
version = "0.1.0"
description = "PySide6 utility widgets and examples"
authors = [{ name = "hvppycoding", email = "hvppycoding@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["PySide6>=6.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyside_lab*"]
